--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="card">
           <div class="imgBox">
-            <img src="./images/image-qr-code.png" />
+            <img src="./images/image-qr-code.png" alt="qrimage" />
             <h2>Improve your front-end skills by building projects</h2>
             <p>
                 Scan the QR Code to visit the FrontEnd Mentor and take your coding skills to the next level
